[package]
name = "sdncli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
log = "0.4"
env_logger = "0.9.0"
toml = "0.7.3"
anyhow = {version = "1.0.71", features = ["backtrace", "std"]}
url = { version = "2" }
async-trait = "0.1"
uuid = { version = "1.3", features = ["v4", "serde"] }
prettytable = "0.10"
