[package]
name = "sdncli"
version = "0.1.2"
authors = ["James R. <jamesvren@163.com>"]
description = "A command line to manipulate SDN resources (Introspect tools inside)."
edition = "2024"
repository = "https://github.com/jamesvren/sdncli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["string", "cargo", "derive"] }
tokio = { version = "1.27.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
log = "0.4"
env_logger = "0.9.0"
toml = "0.7.3"
anyhow = {version = "1.0.71", features = ["backtrace", "std"]}
url = { version = "2" }
uuid = { version = "1.3", features = ["v4", "serde"] }
comfy-table = "7.1"
quick-xml = "0.31"
colored = "2"
flate2 = "1.0"
hex = "*"

# for db
scylla = "0.10"
rustyline = "9"
rustyline-derive = "0.6"
chrono = "0.4"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
